...
    ) {
        SyntaxPalette(
            keyword = Color.rgb(204, 120, 50),
            string = Color.rgb(106, 171, 115),
            comment = Color.rgb(128, 128, 128),
            number = Color.rgb(104, 151, 187),
            tag = Color.rgb(229, 192, 123)
        )
    } else {
        SyntaxPalette(
            keyword = Color.rgb(0, 51, 179),
            string = Color.rgb(0, 110, 40),
            comment = Color.rgb(90, 100, 110),
...
